# vint

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp
.github/workflows/: jekyll.yml
docs/: 404.html  Gemfile  _config.yml  default.html  index.md  variable_int.md
docs/_includes/: footer_custom.html
docs/_layouts/: redirect.html
docs/assets/: katex.css
docs/pages/: home.md  performance.md  tutorial.md
docs/pages/api_reference/: api_reference.md  integer.md
include/: variable_int.hpp  variable_math.hpp
include/vint/: float.hpp  integer.hpp  math.hpp
include/vint/integer/: base.hpp  compare.hpp  convert.hpp  utils.hpp
include/vint/integer/arithmetic/: add_sub.hpp  mul_div.hpp
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
src/: int_arithmetic.cpp  int_constructors.cpp  int_methods.cpp  variable_math.cpp  vectors.cpp  vectors.hpp  vint_arithmetic.cpp  vint_constructors.cpp  vint_methods.cpp  voperators.cpp  voperators.hpp
src/arithmetic/: arithmetic.cpp
src/integer/: bases.cpp  bases.hpp  integer.cpp
src/math/: math.cpp
src/utils/: vectors.cpp  vectors.hpp
src/variable_int/: arithmetic.cpp  constructors.cpp
src/vint/integer/: arithmetic.cpp  constructors.cpp  methods.cpp
src/vint/math/: math.cpp
